--- a/client/index.html
+++ b/client/index.html
@@ -1,26 +1,38 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-  <meta name="description" content="Poetry that speaks, stories that remain. Discover the works of Charbel Abdallah." />
-  <title>Charbel Abdallah | Author & Poet</title>
+    <!-- Mobile -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<link rel="icon" href="/favicon.ico" sizes="any" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png" />
-<link rel="apple-touch-icon" href="/apple-touch-icon.png?v=5" />
-<link rel="manifest" href="/site.webmanifest?v=5" />
+    <!-- Title -->
+    <title>Charbel Abdallah | Author</title>
 
-</head>
+    <!-- SEO -->
+    <meta
+      name="description"
+      content="Official website of Charbel Abdallah — Author, Poet, and Creator. Discover books, poetry, and upcoming releases."
+    />
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/apple-touch-icon.png" />
 
+    <!-- Apple / iPhone Icon -->
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 
+    <!-- Theme Color (Safari top bar color) -->
+    <meta name="theme-color" content="#000000" />
+
+    <!-- Fonts (optional if you use custom fonts elsewhere) -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+  </head>
 
   <body>
     <div id="root"></div>
+
     <script type="module" src="/src/main.tsx"></script>
   </body>
-
 </html>
