--- a/client/index.html
+++ b/client/index.html
@@ -2,37 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-
-    <!-- Mobile -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Title -->
     <title>Charbel Abdallah | Author</title>
 
-    <!-- SEO -->
     <meta
       name="description"
       content="Official website of Charbel Abdallah — Author, Poet, and Creator. Discover books, poetry, and upcoming releases."
     />
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/apple-touch-icon.png" />
+    <!-- Favicon (browser tab) -->
+    <link rel="icon" type="image/png" href="/logo-black-removebg-preview.png" />
 
-    <!-- Apple / iPhone Icon -->
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <!-- iPhone / Safari Home Screen icon -->
+    <link rel="apple-touch-icon" href="/logo-black-removebg-preview.png" />
 
-    <!-- Theme Color (Safari top bar color) -->
     <meta name="theme-color" content="#000000" />
-
-    <!-- Fonts (optional if you use custom fonts elsewhere) -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
   </head>
 
   <body>
     <div id="root"></div>
-
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
