--- a/client/index.html
+++ b/client/index.html
@@ -2,26 +2,34 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+
+    <!-- Viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Charbel Abdallah | Author</title>
+    <!-- Title -->
+    <title>Charbel Abdallah</title>
 
-    <meta
-      name="description"
-      content="Official website of Charbel Abdallah — Author, Poet, and Creator. Discover books, poetry, and upcoming releases."
+    <!-- Browser favicon -->
+    <link
+      rel="icon"
+      type="image/png"
+      href="/logo-black-removebg-preview.png"
     />
 
-    <!-- Favicon (browser tab) -->
-    <link rel="icon" type="image/png" href="/logo-black-removebg-preview.png" />
+    <!-- iPhone / iPad Home Screen icon -->
+    <link
+      rel="apple-touch-icon"
+      href="/icon.png"
+    />
 
-    <!-- iPhone / Safari Home Screen icon -->
-    <link rel="apple-touch-icon" href="/logo-black-removebg-preview.png" />
+    <!-- Optional: theme color -->
+    <meta name="theme-color" content="#ffffff" />
 
-    <meta name="theme-color" content="#000000" />
   </head>
 
   <body>
     <div id="root"></div>
+
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
