--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
     <link
       rel="icon"
       type="image/png"
-      href="/logo-black-removebg-preview.png"
+      href="/apple-touch-icon.png"
     />
 
     <!-- iPhone / iPad Home Screen icon -->
