--- a/client/index.html
+++ b/client/index.html
@@ -18,7 +18,7 @@
 
     <!-- iPhone / iPad Home Screen icon -->
     <link
-      rel="apple-touch-icon"
+      rel="favicon-96x96"
       href="/icon.png"
     />
 
